--- a/style.css
+++ b/style.css
@@ -1,10 +1,42 @@
 body{
+    overflow: hidden; 
     margin: 0;
     padding: 0;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
 
+.carousel{
+    box-sizing: border-box;
+}
 .main{
-    width: 670px;
     margin: 0 auto;
+    position: relative;
+   /* overflow: hidden;  */
+    /* justify-content: space-around; */
+    /* width: 100%; */
+    box-sizing: border-box;
+}
+
+.main div{
+    /* width: 100%; */
+    margin: 0 auto;
+}
+
+.carousel-item{
+    position: absolute;
+    /* display: flex; */
+    /* display: none; */
+    /* position: relative; */
+    width: 100%;
+    /* left: 100%; */
+    /* padding: 0 20px; */
+}
+.carousel-item .mx{
+    margin: 0 130px;
+}
+
+.btn{
+    padding-top: 50px;
+    text-align: center;
+    width: 100%;
 }
